added msg that says they can save the URL to come back to that page

--- a/public/videos/japan.html
+++ b/public/videos/japan.html
@@ -1,4 +1,4 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Mh5LY4Mz15o" frameborder="0" allowfullscreen></iframe>
 
 
-  <h2>The browser's "back" and "forward" navigation commands should work also.</h2>
+  <h2>The browser's "back" and "forward" navigation commands should work to navigate. You can also copy and paste the URL to go to a specific video.</h2>
