--- a/public/videos/matrix.html
+++ b/public/videos/matrix.html
@@ -1,3 +1,3 @@
 <iframe width="420" height="315" src="https://www.youtube.com/embed/pFS4zYWxzNA" frameborder="0" allowfullscreen></iframe>
     
-  <h2>The browser's "back" and "forward" navigation commands should work also.</h2>
+  <h2>The browser's "back" and "forward" navigation commands should work to navigate. You can also copy and paste the URL to go to a specific video.</h2>
